<resources>
    <string name="app_name">All In One Calculator</string>
    <string name="emi">EMI</string>
    <string name="calculator">CALCULATOR</string>
    <string name="bmi">BMI</string>
    <string name="feedback">FEEDBACK</string>
    <string name="gst">GST</string>
    <string name="year">Year:-</string>
    <string name="enter_year">Enter Year</string>
    <string name="amount">Amount:-</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="interest">Interest:-</string>
    <string name="enter_interest">Enter Interest</string>
    <string name="calculate_emi">Calculate EMI</string>
    <string name="emi_calculation">EMI CALCULATION</string>
    <string name="result1">Your EMi Is :</string>
    <string name="bmi_calculation">BMI CALCULATION</string>
    <string name="weight">Weight :-</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="height">Height :-</string>
    <string name="enter_height">Enter Height</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="b1">Very severely underweight</string>
    <string name="b2">severely underweight</string>
    <string name="b3">underweight</string>
    <string name="b4">normal</string>
    <string name="b5">overweight</string>
    <string name="b6">Obese class I</string>
    <string name="b7">Obese class II</string>
    <string name="b8">Obese class III</string>
    <string name="gst_calculation">GST CALCULATION</string>
    <string name="amount1">Amount :-</string>
    <string name="enter_the_amount">Enter Amount</string>
    <string name="gst1">GST % :-</string>
    <string name="enter_the_gst">Enter The GST%</string>
    <string name="calculate_gst">CALCULATE GST</string>
    <string name="g1">"The GST AMOUNT: "</string>
    <string name="g2">"The NET TOTAL AMOUNT: "</string>
    <string name="s1">Please Enter Details Properly!!</string>
    <string name="s2">Please Enter Details Properly!!</string>
    <string name="s3">Please Enter Details Properly!!</string>
    <string name="s5">Enter Proper Details!</string>
    <string name="s6">you Cant Divide Any Number with 0 !!</string>
    <string name="s7">Enter Proper Details!</string>
    <string name="s8">Enter Proper Details!</string>
    <string name="s9">Enter Proper Details!</string>
    <string name="give_the_review_of_app">Give The Review Of App</string>
    <string name="feedback1">Feedback</string>
    <string name="share_feedback">Share Feedback</string>
    <string name="done_your_simple_calculation_here">Done Your Simple Calculation Here</string>
    <string name="emi1">Emi Related Information..!!!</string>
    <string name="emi2">EMI Stands For Equated Monthly Installment \n\nIt is Used To calculate Monthly EMI With accepted 3 Parameters  \n1.Loan Amount  \n2.Interest Rate \n3.Year  \n\nFormula : (loan * (1 + (interest * year))) / (year * 12)</string>
    <string name="emi3">OK</string>
    <string name="bmi1">Bmi Related Information..!!!</string>
    <string name="bmi3">OK</string>
    <string name="gst_1">GST Related Information..!!!</string>
    <string name="gst2">GST Stands For Goods And Service Tax \n\nIt is Used To calculate to eliminate tax , which cascades from the manufacturing level to the consumption level by accepting 2 Parameters  \n1.GST Amount  \n2.Gst Percent   \n\nFormula1 : (get_percent / 100) * total amount \nFormula2: total_amount = total_amount + gst_amount (For Net Total Amount)</string>
    <string name="gst3">OK</string>
    <string name="s_1">Simple Calc Information..!!!</string>
    <string name="s_2">Here With The Help Of 2 Fields You Can Calculate Simple DMAS Operation</string>
    <string name="s_3">OK</string>
    <string name="f1">" All In One Calculator Feedback By User:   "</string>
    <string name="m1">App Related Information..!!!</string>
    <string name="m2">While Using this Application you can calculate \n1.EMI \n2.BMI \n3.GST \n4.Simple DMAS operations \n5.Give FeedBack!!</string>
    <string name="m3">OK</string>
    <string name="bmi2">BMI Stands For Body Mass Index \n\nIt is used to calculate body mass by accepting 2 parameters \n1. Weight \n 2. Height  \n\nFormula: Weight / (Height * Height);</string>
    <string name="f11">Enter Feedback First!!</string>
    <string name="no1">No1</string>
    <string name="no2">No2</string>


</resources>