<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img4"
    tools:context=".emiActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/emi_calculation"
        android:textColor="@color/white"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/txt_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/year"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/edit_NoOfYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignBaseline="@id/txt_year"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_year"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/txt_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_year"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/amount"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/edit_LoanAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_NoOfYear"
        android:layout_alignBaseline="@id/txt_amount"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_amount"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/txt_amount"
        />

    <EditText
        android:id="@+id/edit_Interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_LoanAmt"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_interest"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25dp"
        android:layout_marginLeft="130dp"
        />

    <Button
        android:id="@+id/calc_emi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/calculate_emi"
        android:textColor="@color/white"
        android:layout_below="@+id/edit_Interest"
        android:layout_marginTop="20dp"
        android:width="350dp"
        android:backgroundTint="@color/Red"
        />

    <TextView
        android:id="@+id/forResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calc_emi"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="30dp" />
</RelativeLayout>