<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img4"
    tools:context=".gstActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gst_calculation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textSize="35dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount1"
        android:layout_alignBaseline="@id/editText1"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="25sp"
        android:ems="7"
        android:hint="@string/enter_the_amount"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gst1"
        android:layout_alignBaseline="@id/editText2"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textSize="25dp"/>


    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText1"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="20sp"
        android:ems="7"
        android:hint="@string/enter_the_gst"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25dp"

        />
    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_gst"
        android:layout_below="@id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/orange"
        android:height="60sp"
        android:width="290dp"
        android:textSize="20dp"
        />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn1"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textSize="25dp"/>
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textSize="25dp"/>

</RelativeLayout>