<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img4"
    tools:context=".feedbackActivity">

    <TextView
        android:id="@+id/txt_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_the_review_of_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textColor="@color/white"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_v"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/feedback1"
        android:maxEms="500"
        android:minEms="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30dp" />

    <Button
        android:id="@+id/insertF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:width="250dp"
        android:height="60dp"
        android:backgroundTint="@color/orange"
        android:text="@string/share_feedback"
        android:textSize="20dp" />
</RelativeLayout>